--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p>hello world</p>
+<html>
+<head>
+</head>
+    <body>
+        <div style="background-color: red; width: 100px ; height: 100px ;"> 
+	
+            <div style="background-color: yellow; width: 50% ; height: 50%; margin: auto;" >
+            
+        </div>
+        </div>
+    </body>    
+</html>
