I used css and html to use div tag

--- a/index3.html
+++ b/index3.html
@@ -1,1 +1,14 @@
-<p>Hi there</p>
+<html>
+    <head>
+        <body>
+            <div style="border: 5px;">
+                <p>
+                    hello friends how are you doing there.
+                </p>
+                <div>
+                    hello my good friend.
+                </div>
+            </div>
+        </body>
+    </head>
+</html>
