Proper div used with html and csss code

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <html>
 <head>
+    <link rel="stylesheet" href="MyStyle.css">
 </head>
     <body>
-        <div style="background-color: red; width: 100px ; height: 100px ;"> 
-	
-            <div style="background-color: yellow; width: 50% ; height: 50%; margin: auto;" >
-            
+        <div class="first">
+            <div class="indoor1a">
+            </div>
+            <div class="indoor1b">
+            </div>
+             <div class="indoor1a">
+            </div>
         </div>
+        <div class="second">
+             <div class="indoor2">
+              </div> 
+             <div class="indoor2">
+              </div> 
+             <div class="indoor2">
+              </div> 
+             <div class="indoor2">
+              </div>   
+              <div class="indoor2">
+              </div> <div class="indoor2">
+              </div>
         </div>
     </body>    
 </html>
