--- a/index2.html
+++ b/index2.html
@@ -70,6 +70,9 @@
             <td>132.76</td>
 		</tr>
     </table>
+    <p>
+        hello my frieds how are you all doing
+    </p>
 </div>
 </section>
 </body>
