done some task regardin the position and display tag

--- a/index3.html
+++ b/index3.html
@@ -13,6 +13,8 @@
         <p class="p2">
             WOW 
         </p>
+        <p class="p3">Animation
+        </p>
         </body>
     </head>
 </html>
